2016-05-31  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 1.1.0 released
        =========================

        Use std::vector for naxes argument in GFitsImage (#1779).
        GCTACubePsf and GCTACubeEdisp now save 4D images.
        Change interpolation scheme in GCTABackground3D.
        Add GCsv::append() method (#1773).
        Add GTestSuite::test_value() string method (#1772).
        Add component setting methods to GModelSky (#1770).
        Add GApplication::logFileClose() method.
        Add GModel::read_attributes() and write_attributes() private methods (#1765).
        Add GCTAObservation filename constructor (#1744).
        Add gammalib::number() function (#1743).
        Add GSkyMap::shape() and ndim() methods (#1733).
        Add energy dispersion cube for stacked analysis (#1721).
        Add GEnergy division operator.
        Add GObservations::nobserved() method (#1723)
        Use rejection method in GCTABackground3D::mc() (#1722)
        Use rejection method in GModelSpatialDiffuseCube::mc() (#1722)
        Make GFilename::is_fits thread safe (#1717).
        Revise GTime operators (#1714)
        Add GSkyMap::publish() method to publish map on VO Hub (#1710)
        Add GVOClient::publish() method to publish a FITS HDU (#1710)
        Remove GCTAOnOffObservations class (#1669).
        Handle FITS extensions in GSkyMap load() and save() methods (#1695)
        Restrict Monte Carlo simulations in GModelSpatialDiffuseConst to simulation cone (#1674)
        Use default GTime in GModelSpectral eval() and eval_gradients() methods (#1672)
        Optimise GModelSpatialDiffuseMap::set_mc_cone() method (#1673)
        Optimise GModelSpatialDiffuseCube::set_mc_cone() method (#1673)
        Use default GTime in GObservation::deadc() method (#1670)
        The GApplicationPar::filename() methods now take and return GFilename (#1671)
        Add GFilename methods and remove equivalents from GTools (#1666)