@@ -1,7 +1,7 @@
 /***************************************************************************
  *                    test_GXml.cpp - Test xml module                      *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2010-2014 by Juergen Knoedlseder                         *
+ *  copyright (C) 2010-2016 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -44,11 +44,16 @@ void TestGXml::set(void)
     m_xml_file = "data/test.xml";
 
     // Append tests
-    append(static_cast<pfunction>(&TestGXml::test_GXml_attributes), "Test XML attributes");
-    append(static_cast<pfunction>(&TestGXml::test_GXml_elements), "Test XML elements");
-    append(static_cast<pfunction>(&TestGXml::test_GXml_construct),"Test XML constructors");
-    append(static_cast<pfunction>(&TestGXml::test_GXml_load),"Test XML load");
-    append(static_cast<pfunction>(&TestGXml::test_GXml_access), "Test XML access");
+    append(static_cast<pfunction>(&TestGXml::test_GXml_attributes),
+           "Test XML attributes");
+    append(static_cast<pfunction>(&TestGXml::test_GXml_elements),
+           "Test XML elements");
+    append(static_cast<pfunction>(&TestGXml::test_GXml_construct),
+           "Test XML constructors");
+    append(static_cast<pfunction>(&TestGXml::test_GXml_load),
+           "Test XML load");
+    append(static_cast<pfunction>(&TestGXml::test_GXml_access),
+           "Test XML access");
 
     // Return
     return; 
@@ -68,94 +73,38 @@ TestGXml* TestGXml::clone(void) const
 
 
 /***********************************************************************//**
- * @brief Test XML arrtibutes
+ * @brief Test XML attributes
  **************************************************************************/
 void TestGXml::test_GXml_attributes(void)
 {
-    // Test valid attributes
-    test_try("Test valid attributes");
-    try {
-        GXmlAttribute attr("test", "1.0");
-        test_assert(attr.value() == "1.0","Test if value()= 1.0","Unexpected attribute "+attr.value());
-
-        attr.value("\"1.0\"");
-        test_assert(attr.value() == "1.0","Test if value()= 1.0","Unexpected attribute "+attr.value());
-
-        attr.value("'1.0'");
-        test_assert(attr.value() == "1.0","Test if value()= 1.0","Unexpected attribute "+attr.value());
-
-        attr.value("''1.0'");
-        test_assert(attr.value() == "''1.0'",
-                              "Test if value()= ''1.0'",
-                              "Unexpected attribute "+attr.value());
-
-        attr.value("'1.0");
-        test_assert(attr.value() == "'1.0",
-                              "Test if value()= '1.0",
-                              "Unexpected attribute "+attr.value());
-
-        attr.value("1.0'");
-        test_assert(attr.value() == "1.0'",
-                              "Test if value()= 1.0'",
-                              "Unexpected attribute "+attr.value());
-
-        attr.value("\"1.0");
-        test_assert(attr.value() == "\"1.0",
-                              "Test if value()= \"1.0",
-                              "Unexpected attribute "+attr.value());
-
-
-        attr.value("1.0\"");
-        test_assert(attr.value() == "1.0\"",
-                              "Test if value()= 1.0\"",
-                              "Unexpected attribute "+attr.value());
-
-        attr.value("\"\"1.0\"");
-        test_assert(attr.value() == "\"\"1.0\"",
-                              "Test if value()= \"\"1.0\"",
-                              "Unexpected attribute "+attr.value());
-        test_try_success();
-    }
-    catch (std::exception &e) {
-        test_try_failure(e);
-    }
-
-    // Test invalid attributes
-    test_try("Test invalid attributes 1");
-    try {
-        GXmlAttribute attr("test", "\"\"1.0'\"");
-        test_try_failure();
-    }
-    catch (GException::xml_attribute_value &e) {
-        test_try_success();
-    }
-    catch (std::exception &e) {
-        test_try_failure(e);
-    }
-
-    test_try("Test invalid attributes 2");
-    try {
-        GXmlAttribute attr("test", "''1.0\"");
-        test_try_failure();
-    }
-    catch (GException::xml_attribute_value &e) {
-        test_try_success();
-    }
-    catch (std::exception &e) {
-        test_try_failure(e);
-    }
-
-    test_try("Test invalid attributes 3");
-    try {
-        GXmlAttribute attr("test", "\"1.0'");
-        test_try_failure();
-    }
-    catch (GException::xml_attribute_value &e) {
-        test_try_success();
-    }
-    catch (std::exception &e) {
-        test_try_failure(e);
-    }
+    // Test attribute name-value constructors
+    GXmlAttribute attr1("test", "1.0");
+    test_assert(attr1.value() == "1.0", "Test if value()= 1.0",
+                "Unexpected attribute "+attr1.value());
+    GXmlAttribute attr2("test", "\"1.0\"");
+    test_assert(attr2.value() == "1.0", "Test if value()= 1.0",
+                "Unexpected attribute "+attr2.value());
+    GXmlAttribute attr3("test", "'1.0'");
+    test_assert(attr3.value() == "1.0", "Test if value()= 1.0",
+                "Unexpected attribute "+attr3.value());
+    GXmlAttribute attr4("test", "''1.0'");
+    test_assert(attr4.value() == "'1.0", "Test if value()= '1.0",
+                "Unexpected attribute "+attr4.value());
+    GXmlAttribute attr5("test", "'1.0");
+    test_assert(attr5.value() == "'1.0", "Test if value()= '1.0",
+                "Unexpected attribute "+attr5.value());
+    GXmlAttribute attr6("test", "1.0'");
+    test_assert(attr6.value() == "1.0'", "Test if value()= 1.0'",
+                "Unexpected attribute "+attr6.value());
+    GXmlAttribute attr7("test", "\"1.0");
+    test_assert(attr7.value() == "\"1.0", "Test if value()= \"1.0",
+                "Unexpected attribute "+attr7.value());
+    GXmlAttribute attr8("test", "1.0\"");
+    test_assert(attr8.value() == "1.0\"", "Test if value()= 1.0\"",
+                "Unexpected attribute "+attr8.value());
+    GXmlAttribute attr9("test", "\"\"1.0\"");
+    test_assert(attr9.value() == "\"1.0", "Test if value()= \"1.0",
+                "Unexpected attribute "+attr9.value());
 
     // Return
     return;
